# bombcakes

./: .gitignore  Cargo.toml
.VSCodeCounter/2023-05-16_17-30-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: arms.rs  background.rs  camera.rs  game_audio.rs  main.rs  platform.rs  player.rs  rocket_launcher.rs
src/game/: arms.rs  mod.rs  platform.rs  rocket_launcher.rs
src/game/pause_menu/: button.rs  mod.rs
src/game/player/: mod.rs  player_jump.rs  player_move.rs
src/main_menu/: mod.rs
src/settings_menu/: mod.rs
src/settings_menu/input_types/: mod.rs  slider.rs
src/utils/: interact_button.rs  mod.rs
